# reaper

./: .gitignore  AGENTS.md  README.md  pyproject.toml  verify.py
.agents/skills/speckit-git-feature/: SKILL.md
.github/: dependabot.yml
.github/agents/: speckit.git.feature.agent.md
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/scripts/powershell/: check-prerequisites.ps1
.specify/workflows/: workflow-registry.json
examples/: async_detail.py  location_suggestions.py  narwhals_dataframe.py  pandas_narwhals.py  polars_dataframe.py  search.py  search_pagination.py
reaper/: __init__.py  client.py  exceptions.py  models.py  queries.py
specs/001-factoryboy-test-fixtures/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-factoryboy-test-fixtures/checklists/: requirements.md
specs/001-pip-install-git/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pip-install-git/checklists/: requirements.md
specs/002-python-312-support/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-python-312-support/checklists/: requirements.md
specs/003-pydantic-dependency-conflict/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-search-results-dataframe/: plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: factories.py  test_client.py
(+2 files in other folders)
