[project]
name = "reaper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "narwhals>=2.21.2",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "prek>=0.4.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["reaper*"]
exclude = ["specs*", "tests*", ".agents*"]
